# gust-front-detection-webapp

./: .gitignore  LICENSE  README.md  docker-compose.yml  pyproject.toml  temp  test_run_requests.py
.github/workflows/: README.md  lint.yml
backend/: Dockerfile  app.py  requirements.txt
backend/apis/: api_descriptions.txt  job_status.py  stations.py  (+3 more)
frontend/: Dockerfile  index.html  package-lock.json  package.json  vite.config.js
gust-front-detection-backend/: Dockerfile  app.py
gust-front-detection-backend/APIs/NFGDArunner/NFGDA/: README.md  pyproject.toml
gust-front-detection-backend/APIs/NFGDArunner/NFGDA/matlab/: NF00_header.m  NF13_making_stats_evaluation.m  NF14_making_stats_scores_final.m  NF_single_run.m  boonlib_original.m  rot_score_back.m  tmpCELLdatax2.mat  tmpCELLdatay2.mat
gust-front-detection-backend/APIs/NFGDArunner/NFGDA/matlab/performance_analysis/: arclength.m  polyval_rotation.m  prepare_gf_lines.m
gust-front-detection-backend/APIs/NFGDArunner/NFGDA/matlab/tracking_points/: blob_cluster.m  forecast.m  plot_tracks.m
gust-front-detection-backend/APIs/NFGDArunner/NFGDA/nfgda/: Celldp.npy
gust-front-detection-backend/APIs/NFGDArunner/NFGDA/python/: Bulk_Processing.py  NFFig.py  NF_stochastic_forecast.py  NF_trainset.py  improveFAR.ipynb
gust-front-detection-backend/APIs/NFGDArunner/NFGDA/scripts/: NFGDA.ini
gust-front-detection-frontend/: index.html  package-lock.json  package.json
nfgda_service/: Dockerfile  main.py  nfgda_runner.py  nfgda_service.py  process_output.py  requirements.txt
scripts/: README.md  projectRadarData.py
(+77 files in other folders)
